# SmartCamera_MobileApp

./: README.md
Camera/: .gitignore  README.md  camera.py  movement_det.py  pyproject.toml  simulation.py
Model/: README.md  model.py  pyproject.toml
Server/: .gitignore  README.md  camera.py  camera2.py  database.py  main.py  model.py  nohup.out  pyproject.toml
Server/data/: database.db
SmartCam/: README.md  package-lock.json
SmartCam/app/: add-image.tsx  filters.tsx  household-view.tsx  new-user.tsx  user-details.tsx
SmartCam/components/ui/: alertMax.tsx  alertMin.tsx  checkbox.tsx  circleButton.tsx  entryList.tsx  searchBar.tsx  userEntry.tsx  userList.tsx  userMax.tsx
SmartCam/constants/: api.ts  types.ts
SmartCam/services/: alertService.ts  userService.ts
SmartCam/styles/: GlobalStyles.ts
